Fixed the tight spacing and size of signboard

--- a/src/components/Signboard/Signboard.css
+++ b/src/components/Signboard/Signboard.css
@@ -11,11 +11,11 @@
 }
 
 #signBoard-container {
-  padding: 170px 10vw;
+  padding: 260px 13vw;
   border-radius: 100px;
-  border: 88px solid transparent; /* Reserve space for the border */
+  border: 44px solid transparent; /* Reserve space for the border */
   border-image: url(/images/pixel_art_graphics/UIs/tilesets/paper_tileset.png)
-    286 round;
+    143 round;
   background-color: #eec39a;
   border-image-outset: 0.2;
 }
@@ -25,20 +25,18 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 400px;
-  gap: 30px;
+  height: auto;
+  gap: 21px;
 }
 
 .dashboardPage-navButtons {
   display: grid;
-
   width: 100%;
-  height: 120px;
   cursor: pointer;
 }
 
 .signBoardButton-container {
-  margin: 0px 4vw;
+  margin: 0px 3vw;
   border: 44px solid transparent; /* Reserve space for the border */
   border-image: url(/images/pixel_art_graphics/UIs/tilesets/square_tileset.png)
     143 round;
@@ -47,7 +45,8 @@
 }
 
 .signBoardButton-content {
-  margin: 0px 4vw;
+  margin: 10px 3vw;
+  height: 80px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
